[package]
name = "scripty_stt_service"
version = "0.1.0"
edition = "2021"

# Add debug info to release build
[profile.release]
incremental = false
codegen-units = 1
debug = true

[workspace]
members = [
  "stts_connection_handler",
  "stts_speech_to_text",
]
exclude = [
  "stt_testing",
]

[dependencies]
tokio = { version = "1", features = ["full", "tracing"] }
dashmap = "5"
tracing = "0.1"
console-subscriber = "0.2"
stts_speech_to_text = { path = "stts_speech_to_text" }
stts_connection_handler = { path = "stts_connection_handler" }

[features]
default = []

cuda = ["stts_speech_to_text/cuda"]
opencl = ["stts_speech_to_text/opencl"]

# These additional backends have not been tested
coreml = ["stts_speech_to_text/coreml"]
metal = ["stts_speech_to_text/metal"]
openblas = ["stts_speech_to_text/openblas"]
