[package]
name = "scripty_stt_service"
version = "0.1.0"
edition = "2021"

# Add debug info to release build
[profile.release]
incremental = false
codegen-units = 1
debug = true

[workspace]
members = [
  "stts_connection_handler",
  "stts_speech_to_text",
]
exclude = [
  "stt_testing",
]

[dependencies]
url = "2"
dashmap = "5"
tracing = { version = "0.1", features = ["log"] }
humantime = "2"
uuid = { version = "1.6", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
stts_speech_to_text = { path = "stts_speech_to_text" }
fern = { version = "0.6", features = ["colored"] }
stts_connection_handler = { path = "stts_connection_handler" }
fenrir-rs = { git = "https://github.com/tazz4843/fenrir-rs", branch = "json-logs", features = ["reqwest-async", "json-log-fmt"] }

[features]
default = []

cuda = ["stts_speech_to_text/cuda"]
opencl = ["stts_speech_to_text/opencl"]

# These additional backends have not been tested
coreml = ["stts_speech_to_text/coreml"]
metal = ["stts_speech_to_text/metal"]
openblas = ["stts_speech_to_text/openblas"]
