[package]
name = "stt_testing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hound = "3"
byteorder = "1"
rmp-serde = "1"
uuid = { version = "1", features = ["v4"] }
scripty-common = { git = "https://github.com/scripty-bot/scripty-common", branch = "main" }
