[package]
name = "stts_connection_handler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
num_cpus = "1"
byteorder = "1"
systemstat = "0.1"
tokio = { version = "1", features = ["full"] }
stts_speech_to_text = { path = "../stts_speech_to_text" }
