[package]
name = "stts_speech_to_text"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
once_cell = "1"
parking_lot = "0.12"
tokio = { version = "1", features = ["full", "tracing"] }
whisper-rs = { git = "https://github.com/tazz4843/whisper-rs", branch = "cmake-change-build-type" }
whisper-rs-sys = { git = "https://github.com/tazz4843/whisper-rs", branch = "cmake-change-build-type", features = ["force-debug"] }

[features]
coreml = ["whisper-rs/coreml"]
cuda = ["whisper-rs/cuda"]
metal = ["whisper-rs/metal"]
openblas = ["whisper-rs/openblas"]
opencl = ["whisper-rs/opencl"]
