[package]
name = "stts_speech_to_text"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
once_cell = "1"
parking_lot = "0.12"
tokio = { version = "1", features = ["full", "tracing"] }
whisper-rs = { version = "0.12", features = ["raw-api"] }

[features]
coreml = ["whisper-rs/coreml"]
cuda = ["whisper-rs/cuda"]
metal = ["whisper-rs/metal"]
openblas = ["whisper-rs/openblas"]
opencl = ["whisper-rs/opencl"]
